<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    tools:ignore="HardcodedText,TooManyViews,Overdraw" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:text="@string/msg_settings_specific"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/settings_general"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="6dp"
            android:background="#888888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/listDivider"
            android:orientation="vertical"
            android:showDividers="middle" >

            <CheckBox
                android:id="@+id/cbNotify"
                style="@style/PreferenceLine"
                android:text="@string/settings_notify" />

            <CheckBox
                android:id="@+id/cbOnDemand"
                style="@style/PreferenceLine"
                android:text="@string/settings_ondemand" />

            <CheckBox
                android:id="@+id/cbBlacklist"
                style="@style/PreferenceLine"
                android:text="@string/settings_blacklist" />

            <CheckBox
                android:id="@+id/cbUsage"
                style="@style/PreferenceLine"
                android:text="@string/settings_usagedata" />

            <CheckBox
                android:id="@+id/cbParameters"
                style="@style/PreferenceLine"
                android:text="@string/settings_parameters" />

            <CheckBox
                android:id="@+id/cbLog"
                style="@style/PreferenceLine"
                android:text="@string/settings_log" />

            <CheckBox
                android:id="@+id/cbResetListeners"
                style="@style/PreferenceLine"
                android:text="@string/settings_resetlisteners" />

            <CheckBox
                android:id="@+id/cbExpert"
                style="@style/PreferenceLine"
                android:text="@string/settings_expert" />

            <CheckBox
                android:id="@+id/cbSystem"
                style="@style/PreferenceLine"
                android:layout_marginLeft="30dip"
                android:background="?attr/color_dangerous"
                android:text="@string/settings_syscomponents" />

            <CheckBox
                android:id="@+id/cbExperimental"
                style="@style/PreferenceLine"
                android:layout_marginLeft="30dip"
                android:text="@string/settings_experimental"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/cbHttps"
                style="@style/PreferenceLine"
                android:layout_marginLeft="30dip"
                android:text="@string/settings_https" />

            <CheckBox
                android:id="@+id/cbAOSP"
                style="@style/PreferenceLine"
                android:layout_marginLeft="30dip"
                android:text="@string/settings_aosp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llConfidence"
                style="@style/PreferenceLine"
                android:layout_marginLeft="30dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_confidence"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etConfidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="35"
                    android:inputType="numberDecimal"
                    android:maxLength="2"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                style="@style/PreferenceLine"
                android:layout_marginLeft="30dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_quirks"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etQuirks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="freeze,resolve,test"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <Button
                android:id="@+id/btnFlush"
                style="@style/PreferenceLine"
                android:layout_marginLeft="30dip"
                android:gravity="center"
                android:text="@string/menu_flush" />

            <Button
                android:id="@+id/btnClearDb"
                style="@style/PreferenceLine"
                android:layout_marginLeft="30dip"
                android:gravity="center"
                android:text="@string/menu_clear_db" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/settings_fake_data"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="6dp"
            android:background="#888888" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/listDivider"
            android:showDividers="middle"
            android:shrinkColumns="2"
            android:stretchColumns="2" >

            <TableRow style="@style/PreferenceLine" >

                <CheckBox
                    android:id="@+id/cbRandom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="@string/msg_random_boot" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="@string/menu_clear" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <Button
                    android:id="@+id/btnRandom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="@string/msg_random_now" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="20sp"
                    android:src="@drawable/ic_arrow"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_span="2"
                    android:text="@string/msg_random_access"
                    android:textIsSelectable="false" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <CheckBox android:id="@+id/cbLat" />

                <TextView
                    android:text="@string/settings_lat"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etLat"
                    android:hint="-10.5"
                    android:inputType="numberDecimal|numberSigned"
                    android:singleLine="true"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <CheckBox android:id="@+id/cbLon" />

                <TextView
                    android:text="@string/settings_lon"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etLon"
                    android:hint="105.667"
                    android:inputType="numberDecimal|numberSigned"
                    android:singleLine="true"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <CheckBox android:id="@+id/cbAlt" />

                <TextView
                    android:text="@string/settings_alt"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etAlt"
                    android:hint="686"
                    android:inputType="numberDecimal|numberSigned"
                    android:singleLine="true"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <View />

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@android:string/search_go" />

                <EditText
                    android:id="@+id/etSearch"
                    android:hint="Christmas Island"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <View />

                <TextView
                    android:text="@string/settings_cid"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etCid"
                    android:inputType="numberDecimal|textNoSuggestions"
                    android:maxLength="5"
                    android:singleLine="true"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow style="@style/PreferenceLine" >

                <View />

                <TextView
                    android:text="@string/settings_lac"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etLac"
                    android:inputType="numberDecimal|textNoSuggestions"
                    android:maxLength="5"
                    android:singleLine="true"
                    tools:ignore="HardcodedText" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>